add and remove classes usining JS

--- a/index.html
+++ b/index.html
@@ -5,17 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      .activeHeading {
+        color: firebrick;
+        font-size: 2em;
+        cursor: pointer;
+      }
+
+      .nonactiveHeading {
+        color: cornflowerblue;
+        font-size: 4em;
+        cursor: pointer;
+      }
+
+    </style>
 </head>
 <body>
-
-    <h1>Hi there</h1>
-    
+  <div id="mainHeading" class="activeHeading">
+    Hi there
+  </div>
 </body>
 <script>
-    fullName = (first, last) => {
-    return `${first} ${last}`;
-}
-
-alert(fullName('Logan', 'Anderson'));
+   const heading = document.getElementById('mainHeading');
+   heading.onclick = () => {
+     if (heading.classList.contains('activeHeading')) {
+      heading.classList.remove('activeHeading');
+      heading.classList.add('nonactiveHeading');
+     } else {
+      heading.classList.remove('nonactiveHeading');
+      heading.classList.add('activeHeading');
+     }
+     }
 </script>
 </html>
