--- a/index.html
+++ b/index.html
@@ -5,60 +5,20 @@
   <title></title>
 </head>
 
-<style>
-  img {
-    width: 400px;
-  }
-  .container {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
-  .show-img-overlay {
-    position: relative;
-    bottom: 60px;
-    font-size: 21px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  .hide-img-overlay {
-    position: relative;
-    bottom: 60px;
-    font-size: 21px;
-    color: transparent;
-  }
-</style>
 <body>
-
-  <div class="container">
-    <img src="https://s3.amazonaws.com/bottega-devcamp/browser-js/laptop.jpg" class="site-img" alt="Laptop">
-    <div class="hide-img-overlay">Image Description</div>
-  </div>
-
-  <div class="container">
-    <img src="https://s3.amazonaws.com/bottega-devcamp/browser-js/another-laptop.jpg" class="site-img" alt="Laptop">
-    <div class="hide-img-overlay">Some Other Image Description</div>
-  </div>
+  <div id="dateComponent"></div>
+  <button id="dateBtn">Click for Date</button>
+  <!-- <button onclick="renderDate()">Click for Date</button> -->
 
 </body>
 
 <script>
-const imgs = document.querySelectorAll('.site-img');
+const dateElement = document.getElementById('dateComponent');
+const dateBtn = document.getElementById('dateBtn');
 
-
-imgs.forEach(img => {
-  img.addEventListener('mouseover', (event) => {
-  const captionElement = event.target.parentElement.children[1];
-  captionElement.className = 'show-img-overlay';
-})
-})
-
-
-imgs.forEach(img => {
-  img.addEventListener('mouseout', (event) => {
-  const captionElement = event.target.parentElement.children[1];
-  captionElement.className = 'hide-img-overlay';
-})
-})
+dateBtn.addEventListener('click', (event) => {
+  dateElement.innerHTML = Date();
+});
 
 </script>
 </html>
