--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
 <head>
   <meta charset='UTF-8'>
   <title></title>
+
+  <style>
+    img {
+      width: 400px;
+    }
+  </style>
 </head>
-
 <body>
-  <div id="dateComponent"></div>
-  <button id="dateBtn">Click for Date</button>
-  <!-- <button onclick="renderDate()">Click for Date</button> -->
-
+  <div class='container'>
+    <img src="https://s3.amazonaws.com/bottega-devcamp/browser-js/laptop.jpg" class="site-img" alt="Laptop">
+  </div>
 </body>
 
 <script>
-const dateElement = document.getElementById('dateComponent');
-const dateBtn = document.getElementById('dateBtn');
+const laptop = document.querySelector('.site-img')
 
-dateBtn.addEventListener('click', (event) => {
-  dateElement.innerHTML = Date();
-});
-
+laptop.addEventListener('mouseover', (e) => {
+  e.target.style.borderRight = '40px solid red';
+})
+laptop.addEventListener('mouseout', (e) => {
+  e.target.style.borderRight = '40px solid transparent';
+})
 </script>
 </html>
