--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
   <meta charset='UTF-8'>
   <title></title>
-
-  <style>
-    img {
-      width: 400px;
-    }
-  </style>
 </head>
+
+<style>
+  .hidden {
+    display: none;
+  }
+</style>
 <body>
-  <div class='container'>
-    <img src="https://s3.amazonaws.com/bottega-devcamp/browser-js/laptop.jpg" class="site-img" alt="Laptop">
+
+  <button id="toggleBtn">Toggle Me</button>
+
+  <div id="mainHeading" class="hidden">
+    Hi there
   </div>
+
 </body>
 
 <script>
-const laptop = document.querySelector('.site-img')
+const heading = document.getElementById('mainHeading');
+const btn = document.getElementById('toggleBtn');
 
-laptop.addEventListener('mouseover', (e) => {
-  e.target.style.borderRight = '40px solid red';
-})
-laptop.addEventListener('mouseout', (e) => {
-  e.target.style.borderRight = '40px solid transparent';
+btn.addEventListener('click', (e) => {
+  heading.classList.toggle('hidden');
 })
 </script>
 </html>
