--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
 </head>
 
 <body>
-
-  <input type="text" id="searchBar">
-
+  <div class="widget">
+    <input type="text" id="chat-input">
+    <button id="msgBtn" onclick="sendMessage()">Submit</button>
+  </div>
 </body>
 
 <script>
-  const hotKeys = (e) => {
-    let windowEvent = window.event ? event : e;
-
-    if (windowEvent.keyCode === 66 && windowEvent.ctrlKey) {
-      const searchBar = document.querySelector('#searchBar');
-      searchBar.focus();
-    } 
+   function sendMessage() {
+    const newDiv = document.createElement("div");
+    newDiv.classList.add('chatMsg');
+    let chatInput = document.querySelector('#chat-input').value;
+    const newContent = document.createTextNode(chatInput);
+    newDiv.appendChild(newContent);
+    const widget = document.querySelector(".widget");
+    let chatWrapper = document.querySelector(".chat-wrapper");
+    document.querySelector('#chat-input').value = '';
+    if (document.querySelectorAll('.chatMsg').length > 0) {
+      chatWrapper = document.querySelectorAll('.chatMsg')[0];
+    }
+    widget.insertBefore(newDiv, chatWrapper);
   }
-
-  document.onkeydown = hotKeys;
 </script>
 
 </html>
