--- a/index.html
+++ b/index.html
@@ -4,30 +4,45 @@
 <head>
   <meta charset='UTF-8'>
   <title></title>
+
+  <style>
+    .todoItem:hover {
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="widget">
-    <input type="text" id="chat-input">
-    <button id="msgBtn" onclick="sendMessage()">Submit</button>
+  <div class="todos">
+    <h2>Pending Todos</h2>
+    <ul>
+      <li class="todoItem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, animi.</li>
+      <li class="todoItem">Numquam dolor quo alias nam vel voluptates magni magnam quisquam.</li>
+      <li class="todoItem">Recusandae eaque quisquam facere ab reprehenderit cupiditate magni placeat quis?</li>
+      <li class="todoItem">Expedita asperiores nam saepe voluptatem, nostrum aliquid debitis quam recusandae.</li>
+      <li class="todoItem">Quaerat velit deserunt reprehenderit, vel placeat impedit accusamus non, deleniti!</li>
+    </ul>
   </div>
+
+  <h2>Completed Todos</h2>
+  <ul class="completedTodoWrapper">
+    <div class="completed-footer"></div>
+  </ul>
 </body>
 
 <script>
-   function sendMessage() {
-    const newDiv = document.createElement("div");
-    newDiv.classList.add('chatMsg');
-    let chatInput = document.querySelector('#chat-input').value;
-    const newContent = document.createTextNode(chatInput);
-    newDiv.appendChild(newContent);
-    const widget = document.querySelector(".widget");
-    let chatWrapper = document.querySelector(".chat-wrapper");
-    document.querySelector('#chat-input').value = '';
-    if (document.querySelectorAll('.chatMsg').length > 0) {
-      chatWrapper = document.querySelectorAll('.chatMsg')[0];
-    }
-    widget.insertBefore(newDiv, chatWrapper);
-  }
+const todos = document.querySelectorAll('.todoItem');
+const completedTodos = document.querySelector('.completed');
+const completedTodoWrapper = document.querySelector('.completedTodoWrapper');
+
+todos.forEach(todo => todo.addEventListener('click', (event) => {
+  let completedTodo = document.createElement('li');
+  let todoContent = document.createTextNode(todo.textContent);
+  completedTodo.appendChild(todoContent);
+  completedTodoWrapper.insertBefore(completedTodo, completedTodos);
+  todo.remove();
+}))
+
 </script>
 
 </html>
